maybank-app-deployment.yaml
# maybank-app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maybank-app
  namespace: maybank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: maybank-app
  template:
    metadata:
      labels:
        app: maybank-app
    spec:
      containers:
        - name: maybank-app
          image: raaflahar/maybank-app:latest
          ports:
            - containerPort: 8080
