postgres-deployment.yaml
# postgres-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: maybank-postgres
  namespace: maybank
spec:
  replicas: 1
  selector:
    matchLabels:
      app: maybank-postgres
  template:
    metadata:
      labels:
        app: maybank-postgres
    spec:
      containers:
        - name: postgres
          image: postgres:16
          ports:
            - containerPort: 5432
          volumeMounts:
            - mountPath: /var/lib/postgresql/data
              name: postgres-data
      volumes:
        - name: postgres-data
          emptyDir: {}
