maybank-app-service.yaml
# maybank-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maybank-app
  namespace: maybank
spec:
  type: NodePort
  selector:
    app: maybank-app
  ports:
    - port: 8080
      targetPort: 8080
      nodePort: 30079  # Port untuk diakses dari luar (bisa disesuaikan)
