postgres-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: maybank-postgres
  namespace: maybank
spec:
  type: ClusterIP
  selector:
    app: maybank-postgres
  ports:
    - port: 5432
      targetPort: 5432
