maybank-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: maybank-ingress
  namespace: maybank
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
spec:
  tls:
    - hosts:
        - maybank.local
      secretName: maybank-tls
  rules:
    - host: maybank.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: maybank-app
                port:
                  number: 8080
